--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,7 +2,8 @@
   "store.home": { 
     "blocks": [
       "rich-text",
-      "info-card"
+      "info-card",
+      "info-card#button-right"
     ]
   },
   "rich-text": { 
@@ -12,6 +13,19 @@
     }
   },
   "info-card": {
+    "props": {
+      "isFullModeStyle": false,
+      "textPosition": "right",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
+      "headline": "Vintage Pink",
+      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
+      "callToActionMode": "button",
+      "callToActionText": "Explore",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center"
+    }
+  },
+  "info-card#button-right": {
     "props": {
       "isFullModeStyle": false,
       "textPosition": "right",
