--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -3,7 +3,8 @@
     "blocks": [
       "rich-text",
       "info-card",
-      "info-card#button-right"
+      "info-card#button-right",
+      "info-card#button-left"
     ]
   },
   "rich-text": { 
@@ -37,5 +38,18 @@
       "callToActionUrl": "/sale/d",
       "textAlignment": "center"
     }
+  },
+  "info-card#button-left": {
+    "props": {
+    "isFullModeStyle": false,
+    "textPosition": "left",
+    "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
+    "headline": "Shining chrome",
+    "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
+    "callToActionMode": "link",
+    "callToActionText": "Go to collection",
+    "textAlignment": "center"
+    }
   }
+
 }
